--- a/html/day01quiz02.html
+++ b/html/day01quiz02.html
@@ -40,7 +40,7 @@
                         <i><strong>
                                 <p>안녕하세요.</p>
                                 <p>HTML 회사 입니다.</p>
-                                <P>환영 합니다.</P>
+                                환영 합니다.
                             </strong></i>
                     </dd>
                 </dl>
