--- a/css/day02quiz02.html
+++ b/css/day02quiz02.html
@@ -15,7 +15,8 @@
             <div><a href="*">맛있는 상품 입니다.</a></div>
             <div>5000원</div>
         </div>
-        <button>구매하기</button>
+        <!-- <button>구매하기</button> -->
+        <input type="button" value="구매하기">
     </div>
 </body>
 </html>
