--- a/html/자습용quiz.html
+++ b/html/자습용quiz.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     1. 첫번째 문제<br>
     <div style="margin: auto; background-color: yellow; width: 50%; height: 30%; text-align: center;">
@@ -22,5 +24,53 @@
             화이팅~!
         </P>
     </div>
+    2. 두번째 문제<br>
+    <form action="#" method="get" style="border: 1px solid black;">
+        <fieldset align="center">
+            <legend>소설 로그인</legend>
+            <img src="../resources/images/16.gif" width="10px" height="10px">
+            <a href="https:www.Google.com" target="_blank" title="구글이동"><strong>Log in with Google</strong></a>
+        </fieldset>
+        <P style="text-align: center;"><strong>or</strong></P>
+        <fieldset align="center">
+            <legend>일반 로그인</legend>
+            <input type="text" name="n1" placeholder="Username">
+            <P>
+                <input type="text" placeholder="Password">
+            </P>
+            <p>
+                <input type="button" value="Login" style="background-color: black; color: white; text-align: center; width: 170px;">
+            </p>
+            <p>
+                <a href="#" style="color: black; text-decoration: none;" target="_blank" title="비밃번호 찾기로 이동">Forgot your password?</a>
+            </p>
+        </fieldset>
+    </form>
+    3. 세번째 문제<br>
+    <h1 style="text-align: center;">목록</h1>
+    <ol>
+        <li>역사
+            <ol>
+                <li>개발</li>
+                <li>최초 규격</li>
+                <li>표준 버전의 역사
+                    <ol>
+                        <li>HTML 버전 스케줄</li>
+                        <li>HTML 초안 버전 스케줄</li>
+                        <li>XHTML 버전</li>
+                    </ol>
+                </li>
+            </ol>
+        </li>
+        <li>마크업
+            <ol>
+                <li>HTML 요소</li>
+                <li>데이터 형식</li>
+                <li>문서 형식 선언</li>
+            </ol>
+        </li>
+    </ol>
+
 </body>
+
 </html>
