--- a/html/자습용.html
+++ b/html/자습용.html
@@ -183,34 +183,68 @@
     </table>
     <br>
     <table align="center" border="1">
+        <col style="width: 80px;">
+        <colgroup span="2" style="width: 150px"></colgroup>
+        <col style="width: 100px;">
+        <thead>
+            <tr>
+                <th>번호</th>
+                <th>상품명</th>
+                <th>수량</th>
+                <th>가격</th>
+            </tr>
+        </thead>
+        <tfoot>
+            <tr>
+                <td>총금액</td>
+                <td colspan="3">6,500원</td>
+            </tr>
+        </tfoot>
+        <tbody>
+            <tr>
+                <td>1</td>
+                <td>콜라</td>
+                <td>1개</td>
+                <td>1,500원</td>
+            </tr>
+            <tr>
+                <td>2</td>
+                <td>사이다</td>
+                <td>2개</td>
+                <td rowspan="2">1,000원</td>
+            </tr>
+            <tr>
+                <td>3</td>
+                <td>탄산수</td>
+                <td>3개</td>
+            </tr>
+        </tbody>
+    </table>
+    <table border="1">
         <tr>
-            <th>번호</th>
-            <th>상품명</th>
-            <th>수량</th>
-            <th>가격</th>
+            <th scope="col">구분</th>
+            <th scope="col"> 중간고사</th>
+            <th scope="col">기말고사</th>
         </tr>
-        <tr>
-            <td>1</td>
-            <td>콜라</td>
-            <td>1개</td>
-            <td>1,500원</td>
+        <tr align="center">
+            <th scope="row">전공</th>
+            <td>A+</td>
+            <td>B+</td>
         </tr>
-        <tr>
-            <td>2</td>
-            <td>사이다</td>
-            <td>2개</td>
-            <td rowspan="2">1,000원</td>
-        </tr>
-        <tr>
-            <td>3</td>
-            <td>탄산수</td>
-            <td>3개</td>
-        </tr>
-        <tr>
-            <td>총금액</td>
-            <td colspan="3">6,500원</td>
+        <tr align="center">
+            <th scope="row">교양</th>
+            <td>C-</td>
+            <td>B</td>
         </tr>
     </table>
+    <br>
+    <audio src="../resources/media/audio.wav" controls></audio>
+    <video src="../resources/media/video.mp4" controls></video>
+    <audio controls>
+        <source src="../resources/media/audio.wav" type="audio/wav">
+        <source src="../resources/media/audio.mp3" type="audio/mp3">
+        지원하지 않은 웹 브라우저입니다.
+    </audio>
 </body>
 
 </html>
