--- a/html/자습용.html
+++ b/html/자습용.html
@@ -5,6 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My First Web Page!</title>
+    <link href="자습용.css" rel="stylesheet" type="text/css">
+    <style>
+        #p1 {
+            color: red;
+        }
+    </style>
 </head>
 
 <body>
@@ -245,6 +251,15 @@
         <source src="../resources/media/audio.mp3" type="audio/mp3">
         지원하지 않은 웹 브라우저입니다.
     </audio>
+    <p id="p1">
+        내부 스타일 시트
+    </p>
+    <p id="p2">
+        외부 스타일 시트
+    </p>
+    <p id="p3" style="color: red;">
+        인라인 스타일
+    </p>
 </body>
 
 </html>
