--- a/html/자습용quiz.html
+++ b/html/자습용quiz.html
@@ -39,7 +39,7 @@
                 <input type="text" placeholder="Password">
             </P>
             <p>
-                <input type="button" value="Login" style="background-color: black; color: white; text-align: center; width: 170px;">
+                <input type="button" value="Login" style="background-color: black; color: white; width: 170px;">
             </p>
             <p>
                 <a href="#" style="color: black; text-decoration: none;" target="_blank" title="비밃번호 찾기로 이동">Forgot your password?</a>
