--- a/html/자습용2.html
+++ b/html/자습용2.html
@@ -28,6 +28,36 @@
             content: '<after>';
             color: blue;
         }
+
+        a:link {
+            color: orange;
+        }
+
+        a:visited {
+            color: green;
+        }
+
+        button:active {
+            color: red;
+        }
+
+        input:focus {
+            color: red;
+        }
+
+        input:checked+label {
+            color: red;
+        }
+
+        input:disabled,
+        button:disabled {
+            background: #ccc;
+        }
+
+        input:enabled,
+        button:enabled {
+            background: #ccc;
+        }
     </style>
 </head>
 
@@ -36,6 +66,14 @@
     <a href="#">기본 a 태그</a>
     <a href="#" target="_blank">새 창으로 열리는 a 태그</a>
     <p>Lorem, ipsum dolor.</p>
+    <a href="https://www.naver.com/" target="_blank" title="네이버 이동">네이버 이동</a>
+    <button>버튼</button>
+    <input type="button" value="버튼">
+    <input type="checkbox">
+    <label>책 읽기</label>
+    <input type="text" disabled>
+    <button disabled>버튼</button>
+
 </body>
 
 </html>
