--- a/project/project.html
+++ b/project/project.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>never</title>
     <link href="project.css" rel="stylesheet" type="text/css">
     </link>
+    <link href="./네이버 모자 변형.png" rel="icon">
 </head>
 
 <body>
@@ -29,7 +30,36 @@
             </ol>
         </nav>
     </header>
-    <main>1</main>
+    <main>
+        <div>
+            <section>
+
+            </section>
+            <section>
+
+            </section>
+            <section>
+
+            </section>
+        </div>
+        <div>
+            <section>
+                <h1>금주의 추천앨범<br>
+                    <a href="https://www.youtube.com/watch?v=ekr2nIex040" target="_blank" title="유투브 뮤비 이동"
+                        style="text-decoration: none; color: black;"> APT. - 로제
+                        (ROSÉ), Bruno Mars</a>
+                </h1>
+                <div></div>
+                <audio src="./y2mate.com - ROSE  Bruno Mars  APT Official Music Video.mp3" controls loop autoplay></audio>
+            </section>
+            <section>
+                <h1>앨범 소개</h1>
+            </section>
+            <section>
+
+            </section>
+        </div>
+    </main>
     <footer>
         <small>
             회사소개 &#183; 광고안내 &#183; 검색등록 &#183; 제휴문의 &#183; 인재채용 &#183; 서비스약관 &#183; 청소년보호 정책 &#183; 개인 정보처리방침
