--- a/project/project.html
+++ b/project/project.html
@@ -44,19 +44,30 @@
         </div>
         <div>
             <section>
-                <h1>금주의 추천앨범<br>
+                <h1 style="margin: 20px;">금주의 추천앨범<br>
                     <a href="https://www.youtube.com/watch?v=ekr2nIex040" target="_blank" title="유투브 뮤비 이동"
                         style="text-decoration: none; color: black;"> APT. - 로제
                         (ROSÉ), Bruno Mars</a>
                 </h1>
                 <div></div>
-                <audio src="./y2mate.com - ROSE  Bruno Mars  APT Official Music Video.mp3" controls loop autoplay></audio>
+                <audio src="./y2mate.com - ROSE  Bruno Mars  APT Official Music Video.mp3" controls loop
+                    autoplay></audio>
             </section>
             <section>
-                <h1>앨범 소개</h1>
+                <h1 style="margin-top: 20px;">앨범 소개</h1>
+                <p style="margin-top: 50px;">
+                    <q cite="https://vibe.naver.com/magazines/62493">
+                        블랙핑크 멤버들의 솔로곡들이 연이어 발매되고 있다. 역시나 이번에도 뜨거운 반응을 얻고 있는 로제의 'APT.'는 매우 위트가 넘치는 트랙이다. 한국인이라면 모를 수 없는
+                        '랜덤 게임' 노래를 활용해 인트로를 만든 로제의 아이디어는 매우 특별하고 돋보인다. 더불어 앞서 솔로 활동으로 보여주었던 모습 때와는 전혀 다른 테마와 무드로 만들어진
+                        'APT.'의 멋들어진 한끗은 브루노 마스와의 컬래버레이션으로 채워졌다. 로제의 트렌디하고 개성 강한 보컬과 브루노 마스의 센스 넘치는 보컬이 만나 빚어내는 재미가 있다.
+                        또한 'APT.'의 뮤직비디오는 절대로 놓치지 말아야 한다. 엉뚱한 모습을 보여주며 소위 'B급 감성'에 충실한 듯한 콘셉트로 키치한 무드를 구현한 부분이 상당히
+                        인상적이다. 각자 뚜렷한 매력을 지닌 톱 아티스트들의 조합이 주는 이런 재미는 리스너들이 즐기며 사랑하지 않고 못 배길 것이다.
+                    </q>
+                </p>
             </section>
             <section>
-
+                <div></div>
+                <div></div>
             </section>
         </div>
     </main>
