--- a/webproject/project.html
+++ b/webproject/project.html
@@ -8,6 +8,9 @@
     <link href="project.css" rel="stylesheet" type="text/css">
     </link>
     <link href="./네이버 모자 변형.png" rel="icon">
+    <script src="project.js" charset="UTF-8">
+
+    </script>
 </head>
 
 <body>
@@ -33,7 +36,11 @@
     <main>
         <div>
             <section>
-
+                <div></div>
+                <div>
+                    <img src="./미니게임천국.jpg" alt="미니게임천국">
+                    <a href="../project/src/project/Main.java" target="_blank" title="자바 코드 이동">자바 코드 이동</a>
+                </div>
             </section>
             <section>
 
@@ -44,7 +51,7 @@
         </div>
         <div>
             <section>
-                <h1 style="margin: 20px;">금주의 추천앨범<br>
+                <h1>금주의 추천앨범<br>
                     <a href="https://www.youtube.com/watch?v=ekr2nIex040" target="_blank" title="유투브 뮤비 이동"
                         style="text-decoration: none; color: black;"> APT. - 로제
                         (ROSÉ), Bruno Mars</a>
@@ -54,7 +61,7 @@
                     autoplay></audio>
             </section>
             <section>
-                <h1 style="margin-top: 20px;">앨범 소개</h1>
+                <h1>앨범 소개</h1>
                 <p style="margin-top: 50px;">
                     <q cite="https://vibe.naver.com/magazines/62493">
                         블랙핑크 멤버들의 솔로곡들이 연이어 발매되고 있다. 역시나 이번에도 뜨거운 반응을 얻고 있는 로제의 'APT.'는 매우 위트가 넘치는 트랙이다. 한국인이라면 모를 수 없는
@@ -66,8 +73,29 @@
                 </p>
             </section>
             <section>
-                <div></div>
-                <div></div>
+                <h1>추천 관련 동영상</h1><br>
+                <a href="https://www.youtube.com/watch?v=dsAMzn6v5o8" target="_blank" title="아파트 황정민 패러디">아파트 황정민
+                    패러디</a><br>
+                <fieldset>
+                    <legend>실시간 반응</legend>
+                    &#8618; AI로는 따라올 수 없는 가내수공업 감성 ㅋㅋㅋㅋㅋㅋㅋㅋㅋ<br>
+                    &#8618; ㅋㅋㅋㅋ 비슷한 발음을 찾기위해 수십번 영화를 돌려봤을 그 정성이 진짜 대단하다.. 이건 로제 아파트 작곡가보다 더 정성스런 작업일수도 있었겠다..<br>
+                    &#8618; 딴것보다 영어 가사 하나하나를 다 집어넣었다는게 ㄹㅇ찐 광기ㅋㅋㅋ
+                </fieldset>
+                <a href="https://www.youtube.com/watch?v=Cv3nEnKeFJY" target="_blank" title="아파트 북한 패러디">아파트 북한
+                    패러디</a><br>
+                <fieldset>
+                    <legend>실시간 반응</legend>
+                    &#8618; 현재 북한 아오지차트 1위<br>
+                    &#8618; 오늘 쏜 ICBM처럼 날아왔습니다<br>
+                    &#8618; 원곡 안듣고 이것만 듣고있으면 개추ㅋㅋ<br>
+                    <div id="main">
+                        &#8618; I'm sure this masterpiece will skyrocket
+                    </div>
+                    <button id="btn" onclick="btn()">번역</button>
+
+                </fieldset>
+
             </section>
         </div>
     </main>
