--- a/webproject/project.html
+++ b/webproject/project.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 
 <head>
     <meta charset="UTF-8">
@@ -41,7 +41,8 @@
                 </div>
             </section>
             <section>
-
+                <img src="비행기.png" alt="비행기"><br>
+                <a  href="game.html" title="갤러그 이동" target="_blank">갤러그</a>
             </section>
             <section>
 
