--- a/webproject/project.html
+++ b/webproject/project.html
@@ -42,7 +42,10 @@
             </section>
             <section>
                 <img src="비행기.png" alt="비행기"><br>
-                <a  href="game.html" title="갤러그 이동" target="_blank">갤러그</a>
+                <a href="game.html" title="갤러그 이동" target="_blank">갤러그</a><br><br>
+                1. 방향키로 움직이고 스페이스바를 눌러 총알을 발사하세요.<br>
+                2. 적은 무작위 위치에서 아래로 일정한 속도로 떨어집니다.<br>
+                3. 적을 죽이면 점수가 1점씩 올라가고 적이 맨 아래까지 도달하면 게임오버입니다.
             </section>
             <section>
 
@@ -63,9 +66,12 @@
                 <h1>앨범 소개</h1>
                 <p style="margin-top: 50px;">
                     <q cite="https://vibe.naver.com/magazines/62493">
-                        블랙핑크 멤버들의 솔로곡들이 연이어 발매되고 있다. 역시나 이번에도 뜨거운 반응을 얻고 있는 로제의 'APT.'는 매우 위트가 넘치는 트랙이다. 한국인이라면 모를 수 없는
-                        '랜덤 게임' 노래를 활용해 인트로를 만든 로제의 아이디어는 매우 특별하고 돋보인다. 더불어 앞서 솔로 활동으로 보여주었던 모습 때와는 전혀 다른 테마와 무드로 만들어진
-                        'APT.'의 멋들어진 한끗은 브루노 마스와의 컬래버레이션으로 채워졌다. 로제의 트렌디하고 개성 강한 보컬과 브루노 마스의 센스 넘치는 보컬이 만나 빚어내는 재미가 있다.
+                        블랙핑크 멤버들의 솔로곡들이 연이어 발매되고 있다. 역시나 이번에도 뜨거운 반응을 얻고 있는 로제의 'APT.'는 매우 위트가 넘치는 트랙이다. 한국인이라면 모를 수
+                        없는
+                        '랜덤 게임' 노래를 활용해 인트로를 만든 로제의 아이디어는 매우 특별하고 돋보인다. 더불어 앞서 솔로 활동으로 보여주었던 모습 때와는 전혀 다른 테마와 무드로
+                        만들어진
+                        'APT.'의 멋들어진 한끗은 브루노 마스와의 컬래버레이션으로 채워졌다. 로제의 트렌디하고 개성 강한 보컬과 브루노 마스의 센스 넘치는 보컬이 만나 빚어내는 재미가
+                        있다.
                         또한 'APT.'의 뮤직비디오는 절대로 놓치지 말아야 한다. 엉뚱한 모습을 보여주며 소위 'B급 감성'에 충실한 듯한 콘셉트로 키치한 무드를 구현한 부분이 상당히
                         인상적이다. 각자 뚜렷한 매력을 지닌 톱 아티스트들의 조합이 주는 이런 재미는 리스너들이 즐기며 사랑하지 않고 못 배길 것이다.
                     </q>
@@ -104,6 +110,6 @@
         </small><br>
         <strong>고객센터 : 1234-5678</strong>
     </footer>
-</body>
+    </div>
 
 </html>
