--- a/js/day03quiz04.html
+++ b/js/day03quiz04.html
@@ -16,7 +16,7 @@
             msg += '<table border="1" align="center"><tr><th>아이디</th><th>이름</th><th>나이</th></tr>'
             userInfo.forEach((userInfo) => {
                 msg += `<tr><td>${userInfo.id}</td>
-                    <td onclick="func(this)">${userInfo.name}</td><td>${userInfo.age}</td></tr>`
+                    <td onclick="func('${userInfo.id}')">${userInfo.name}</td><td>${userInfo.age}</td></tr>`
             });
             msg += `</table>`
             document.getElementById("main").innerHTML = msg
@@ -27,10 +27,8 @@
             let msg = "";
             msg += '<table border="1" align="center"><tr><th>아이디</th><th>이름</th><th>나이</th></tr>'
             for (let i = 0; i < userInfo.length; i++) {
-                console.log(btn2)
-                console.log(userInfo[i].id)
                 if (btn2 == userInfo[i].id) {
-                    msg += `<tr><td>${userInfo[i].id}</td><td onmouseover="over(this)">${userInfo[i].name}</td><td>${userInfo[i].age}</td></tr>`
+                    msg += `<tr><td>${userInfo[i].id}</td><td>${userInfo[i].name}</td><td>${userInfo[i].age}</td></tr>`
                     break;
                 }
             }
@@ -48,19 +46,18 @@
             let msg = "";
             msg += '<table border="1" align="center"><tr><th>아이디</th><th>이름</th><th>나이</th></tr>'
             userInfo.forEach((userInfo) => {
-                msg += `<tr><td>${userInfo.id}</td><td onmouseover="over(this)">${userInfo.name}</td><td>${userInfo.age}</td></tr>`
+                msg += `<tr><td>${userInfo.id}</td><td>${userInfo.name}</td><td>${userInfo.age}</td></tr>`
             });
             msg += `</table>`
             document.getElementById("main").innerHTML = msg
         }
 
-        const func = (td) => {
-            console.log("td : ", td.innerHTML)
+        const func = (id) => {
             const user = userInfo.filter((member) =>
-                (td.innerHTML == member.name) ? member : "")[0];
+                (id == member.id) ? member : "")[0];
             const msg = `<b>아이디</b> : ${user.id}<br>
-      <b>이름</b> : ${user.name}<br>
-      <b>나이</b> : ${user.age}<br>`
+            <b>이름</b> : ${user.name}<br>
+            <b>나이</b> : ${user.age}<br>`
             document.getElementById("main").innerHTML = msg;
         }
     </script>
