--- a/js/day03quiz01.html
+++ b/js/day03quiz01.html
@@ -25,7 +25,7 @@
         }
     </script>
     <style>
-        tr {
+        #table>tr {
             cursor: pointer;
 
             &:hover {
@@ -36,7 +36,7 @@
 </head>
 
 <body>
-    <table border="1" align="center">
+    <table border="1" align="center" id="table">
         <tr>
             <th>아이디</th>
             <th>이름</th>
