--- a/js/day03quiz01.html
+++ b/js/day03quiz01.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="css.css" rel="stylesheet" type="text/css">
     <script>
         const Func = (tr) => {
             for (let i = 1; i < 8; i++) {
@@ -25,7 +26,7 @@
         }
     </script>
     <style>
-        #table>tr {
+        table>tbody>tr {
             cursor: pointer;
 
             &:hover {
