--- a/js/day03quiz02.html
+++ b/js/day03quiz02.html
@@ -27,13 +27,13 @@
         }
 
         const tableFunc = () => {
-            let msg = ` <table border="1" align="center">
+            let msg = ` <table border=1 align=center>
         <tr>
             <th>아이디</th>
             <th>이름</th>
         </tr>`
             for (i = 1; i <= 7; i++) {
-                msg += ` <tr id=${i} onclick="Func(this)">
+                msg += `<tr id=${i} onclick=Func(this)c>
             <td>${i}. aaa</td>
             <td>${i}. 홍길동</td>
         </tr>`
