--- a/webproject/project.html
+++ b/webproject/project.html
@@ -55,7 +55,7 @@
             <section>
                 <h1>금주의 추천앨범<br>
                     <a href="https://www.youtube.com/watch?v=ekr2nIex040" target="_blank" title="유투브 뮤비 이동"
-                        style="text-decoration: none; color: black;"> APT. - 로제
+                        style="color: black;"> APT. - 로제
                         (ROSÉ), Bruno Mars</a>
                 </h1>
                 <div></div>
@@ -110,6 +110,5 @@
         </small><br>
         <strong>고객센터 : 1234-5678</strong>
     </footer>
-    </div>
 
 </html>
