--- a/webproject/game.html
+++ b/webproject/game.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>갤러그</title>
+    <link href="./비행기.png" rel="icon">
 </head>
 
 <body align="center">
