--- a/html/자습용4.html
+++ b/html/자습용4.html
@@ -41,10 +41,15 @@
             align-self: baseline;
         }
 
-        .grid-container {
+        /* .grid-container {
             display: grid;
             grid-template-columns: repeat(2, minmax(50px, 100px));
             grid-template-rows: repeat(2, minmax(10px, 100px));
+            row-gap: 10px;
+            column-gap: 20px;
+            align-items: end;
+            justify-items: end;
+            place-items: end end;
         }
 
         .grid-item {
@@ -54,6 +59,42 @@
 
         .grid-item:nth-child(2n) {
             background: #bf5e5e;
+        } */
+
+        .grid-container {
+            display: grid;
+            grid-template-columns: 100px 100px 100px;
+            grid-template-rows: 100px 100px 100px;
+
+            &>div {
+                color: white;
+            }
+        }
+
+        .grid-item:nth-child(1) {
+            grid-column-start: 1;
+            grid-column-end: 3;
+            background: red;
+        }
+
+        .grid-item:nth-child(2) {
+            grid-column-start: 3;
+            grid-column-end: 4;
+            background: pink;
+        }
+
+        .grid-item:nth-child(3) {
+            grid-row-start: 2;
+            grid-row-end: 4;
+            background: gold;
+        }
+
+        .grid-item:nth-child(4) {
+            grid-column-start: 2;
+            grid-column-end: 4;
+            grid-row-start: 2;
+            grid-row-end: 4;
+            background: blue;
         }
     </style>
 </head>
@@ -71,11 +112,17 @@
         <div class="flex-item">item-9</div>
         <div class="flex-item">item-10</div>
         <div class="flex-item">item-11</div> -->
-    <div class="grid-container">
+    <!-- <div class="grid-container">
         <div class="grid-item">item-1</div>
         <div class="grid-item">item-2</div>
         <div class="grid-item">item-3</div>
         <div class="grid-item">item-4</div>
+    </div> -->
+    <div class="grid-container">
+        <div class="grid-item">1</div>
+        <div class="grid-item">2</div>
+        <div class="grid-item">3</div>
+        <div class="grid-item">4</div>
     </div>
 </body>
 
