--- a/js/ex30.html
+++ b/js/ex30.html
@@ -18,6 +18,7 @@
         let e
         const digClock = () => {
             let today = new Date();
+            console.log(today)
             let time = today.getMonth() + 1 + "월"
             time += today.getDate() + "일"
             time += today.getHours() + "시"
