--- a/html/자습용7.html
+++ b/html/자습용7.html
@@ -42,10 +42,10 @@
             console.log(`웹브라우저 창의 스크롤 세로 위치 : ${window.scrollY}`)
         }
         function popup(){
-            window.open("popup.html","팝업","width=200","height=100")
+            window.open("popup.html","","width=200","height=100")
         }
     </script>
     
 </body>
 
-</html>
+</html>7u8i
